Add gitignore and dotenv

--- a/ReAct_SWE.ipynb
+++ b/ReAct_SWE.ipynb
@@ -6,6 +6,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import dotenv\n",
+    "dotenv.load_dotenv()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "from datasets import load_dataset\n",
     "swebench = load_dataset('princeton-nlp/SWE-bench', split='dev')"
    ]
