--- a/ReAct_SWE.ipynb
+++ b/ReAct_SWE.ipynb
@@ -17,15 +17,7 @@
    "outputs": [],
    "source": [
     "from datasets import load_dataset\n",
-    "swebench = load_dataset('princeton-nlp/SWE-bench', split='dev')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "swebench = load_dataset('princeton-nlp/SWE-bench', split='dev')\n",
     "swebench[0]"
    ]
   },
@@ -42,10 +34,16 @@
     "from vm import VirtualMachine\n",
     "from agent_tools import create_tools\n",
     "\n",
+    "def init_repo_env(vm, repo_name: str, commit_hash: str)->None:\n",
+    "    repo_url = f\"https://github.com/{repo_name}.git\"\n",
+    "    vm.run_command(f\"git clone {repo_url}\")\n",
+    "    repo_dir = repo_name.split('/')[-1]\n",
+    "    vm.run_command(f\"cd {repo_dir} && git checkout {commit_hash}\")\n",
     "\n",
     "def do_prediction(data):\n",
-    "    with VirtualMachine(image_name='swe_img:latest', tool_file_path='vm_tools.py') as vm:\n",
-    "        vm.init_repo_env(repo_name=data['repo'], commit_hash=data['base_commit'])\n",
+    "    with VirtualMachine(image_name='swe_img:latest') as vm:\n",
+    "        init_repo_env(vm, data['repo'], data['base_commit'])\n",
+    "        vm.copy_file('vm_tools.py', '/tools.py')\n",
     "\n",
     "        llm = ChatOpenAI(model='gpt-4o-mini')\n",
     "        tools = create_tools(vm)\n",
@@ -64,11 +62,7 @@
     "            }\n",
     "        )\n",
     "    \n",
-    "    return final_state\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n"
+    "    return final_state"
    ]
   },
   {
