--- a/ReAct_SWE.ipynb
+++ b/ReAct_SWE.ipynb
@@ -84,7 +84,7 @@
     "def do_prediction(data):\n",
     "    with VirtualMachine(image_name='swe_img:latest') as vm:\n",
     "        init_repo_env(vm, data['repo'], data['base_commit'])\n",
-    "        vm.copy_file('vm_tools.py', '/tools.py')\n",
+    "        vm.copy_file_to_vm('vm_tools.py', '/tools.py')\n",
     "\n",
     "        llm = ChatOpenAI(model='gpt-4o-mini')\n",
     "        tools = create_tools(vm)\n",
