change display line from 30 to 100

--- a/ReAct_SWE.ipynb
+++ b/ReAct_SWE.ipynb
@@ -47,7 +47,7 @@
     "            input={\n",
     "                'messages': [\n",
     "                    ('system', 'You are an autonomous programmer, and you are going to propose a pull request based on the problem below. You are given several tools to help you with the task. The requested repo has been cloned to the root directory. You can use the tools to view, edit, and create files, and submit the patch.'),\n",
-    "                    ('user', f'Please submit a pull request based on the following problem:\\nProblem: {data[\"problem_statement\"]}\\nRepo: {data[\"repo\"]}\\nHints: {data[\"hints_text\"]}\\nCreated at: {data[\"created_at\"]}\\nNow, start your work.\\n'),\n",
+    "                    ('user', f'Please submit a pull request based on the following problem:\\nRepo: {data[\"repo\"]}\\nProblem: {data[\"problem_statement\"]}\\nHints: {data[\"hints_text\"]}\\nCreated at: {data[\"created_at\"]}\\nNow, start your work.\\n'),\n",
     "                ]\n",
     "            },\n",
     "            config={\n",
