Format the codebase and add code understanding part to thre repo using vector store, Chroma db

--- a/ReAct_SWE.ipynb
+++ b/ReAct_SWE.ipynb
@@ -36,25 +36,33 @@
     "\n",
     "\n",
     "def do_prediction(data):\n",
-    "    with RepoVM(image_name='swe_img:latest', repo_name=data['repo'], commit_hash=data['base_commit']) as vm:\n",
-    "        \n",
-    "        llm = ChatOpenAI(model='gpt-4o-mini')\n",
+    "    with RepoVM(\n",
+    "        image_name=\"swe_img:latest\",\n",
+    "        repo_name=data[\"repo\"],\n",
+    "        commit_hash=data[\"base_commit\"],\n",
+    "    ) as vm:\n",
+    "\n",
+    "        llm = ChatOpenAI(model=\"gpt-4o-mini\")\n",
     "        tools = create_tools(vm)\n",
     "\n",
     "        agent = create_react_agent(llm, tools=tools.values(), debug=True)\n",
-    "        \n",
+    "\n",
     "        final_state = agent.invoke(\n",
     "            input={\n",
-    "                'messages': [\n",
-    "                    ('system', 'You are an autonomous programmer, and you are going to propose a pull request based on the problem below. You are given several tools to help you with the task. The requested repo has been cloned to the root directory. You can use the tools to view, edit, and create files, and submit the patch.'),\n",
-    "                    ('user', f'Please submit a pull request based on the following problem:\\nRepo: {data[\"repo\"]}\\nProblem: {data[\"problem_statement\"]}\\nHints: {data[\"hints_text\"]}\\nCreated at: {data[\"created_at\"]}\\nNow, start your work.\\n'),\n",
+    "                \"messages\": [\n",
+    "                    (\n",
+    "                        \"system\",\n",
+    "                        \"You are an intelligence programmer, and you are going to propose a pull request based on the problem below. You are given several tools to help you with the task. The requested repo has been cloned to the root directory. You can use the tools to view, edit, and create files, and submit the patch.\",\n",
+    "                    ),\n",
+    "                    (\n",
+    "                        \"user\",\n",
+    "                        f'Please submit a pull request based on the following problem:\\nRepo: {data[\"repo\"]}\\nProblem: {data[\"problem_statement\"]}\\nHints: {data[\"hints_text\"]}\\nCreated at: {data[\"created_at\"]}\\nNow, start your work.\\n',\n",
+    "                    ),\n",
     "                ]\n",
     "            },\n",
-    "            config={\n",
-    "                \"recursion_limit\": 50\n",
-    "            }\n",
+    "            config={\"recursion_limit\": 50},\n",
     "        )\n",
-    "    \n",
+    "\n",
     "    return final_state"
    ]
   },
