refactor: Update scroll_up and scroll_down methods in FileEditor

--- a/ReAct_SWE.ipynb
+++ b/ReAct_SWE.ipynb
@@ -18,60 +18,7 @@
    "source": [
     "from datasets import load_dataset\n",
     "swebench = load_dataset('princeton-nlp/SWE-bench', split='dev')\n",
-    "swebench[0]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from langgraph.graph import StateGraph, add_messages\n",
-    "from typing import TypedDict, Annotated\n",
-    "from langgraph.prebuilt import create_react_agent\n",
-    "from langchain_openai import ChatOpenAI\n",
-    "from vm import RepoVM\n",
-    "from agent_tools import create_tools\n",
-    "\n",
-    "\n",
-    "def do_prediction(data):\n",
-    "    with RepoVM(\n",
-    "        image_name=\"swe_img:latest\",\n",
-    "        repo_name=data[\"repo\"],\n",
-    "        commit_hash=data[\"base_commit\"],\n",
-    "    ) as vm:\n",
-    "\n",
-    "        llm = ChatOpenAI(model=\"gpt-4o-mini\")\n",
-    "        tools = create_tools(vm)\n",
-    "\n",
-    "        agent = create_react_agent(llm, tools=tools.values(), debug=True)\n",
-    "\n",
-    "        final_state = agent.invoke(\n",
-    "            input={\n",
-    "                \"messages\": [\n",
-    "                    (\n",
-    "                        \"system\",\n",
-    "                        \"You are an intelligence programmer, and you are going to propose a pull request based on the problem below. You are given several tools to help you with the task. The requested repo has been cloned to the root directory. You can use the tools to view, edit, and create files, and submit the patch.\",\n",
-    "                    ),\n",
-    "                    (\n",
-    "                        \"user\",\n",
-    "                        f'Please submit a pull request based on the following problem:\\nRepo: {data[\"repo\"]}\\nProblem: {data[\"problem_statement\"]}\\nHints: {data[\"hints_text\"]}\\nCreated at: {data[\"created_at\"]}\\nNow, start your work.\\n',\n",
-    "                    ),\n",
-    "                ]\n",
-    "            },\n",
-    "            config={\"recursion_limit\": 50},\n",
-    "        )\n",
-    "\n",
-    "    return final_state"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "from prediction import do_prediction\n",
     "result = do_prediction(swebench[0])\n",
     "print(result)"
    ]
