--- a/ReAct_SWE.ipynb
+++ b/ReAct_SWE.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -11,7 +11,7 @@
        "True"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -23,20 +23,80 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/mark/Library/Python/3.9/lib/python/site-packages/urllib3/__init__.py:35: NotOpenSSLWarning: urllib3 v2 only supports OpenSSL 1.1.1+, currently the 'ssl' module is compiled with 'LibreSSL 2.8.3'. See: https://github.com/urllib3/urllib3/issues/3020\n",
+      "  warnings.warn(\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "AIMessage(content='Hello! How can I assist you today?', response_metadata={'token_usage': {'completion_tokens': 9, 'prompt_tokens': 11, 'total_tokens': 20}, 'model_name': 'gpt-3.5-turbo-0125', 'system_fingerprint': None, 'finish_reason': 'stop', 'logprobs': None}, id='run-60307156-4713-4062-9c17-c9abed725cec-0', usage_metadata={'input_tokens': 11, 'output_tokens': 9, 'total_tokens': 20})"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from langchain_openai import ChatOpenAI\n",
+    "\n",
+    "llm = ChatOpenAI()\n",
+    "llm.invoke(\"Hello, world!\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Python(56248) MallocStackLogging: can't turn off malloc stack logging because it was not enabled.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Dataset({\n",
+      "    features: ['repo', 'instance_id', 'base_commit', 'patch', 'test_patch', 'problem_statement', 'hints_text', 'created_at', 'version', 'FAIL_TO_PASS', 'PASS_TO_PASS', 'environment_setup_commit'],\n",
+      "    num_rows: 2\n",
+      "})\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Python(56288) MallocStackLogging: can't turn off malloc stack logging because it was not enabled.\n",
+      "Python(56290) MallocStackLogging: can't turn off malloc stack logging because it was not enabled.\n"
+     ]
+    }
+   ],
    "source": [
     "from datasets import load_dataset\n",
     "swebench = load_dataset('princeton-nlp/SWE-bench', split='test')\n",
     "\n",
     "# Randomly select a test set with 10 samples\n",
-    "test_set = swebench.shuffle(seed=42).select(range(10))\n",
+    "num_samples = 2\n",
+    "test_set = swebench.shuffle(seed=42).select(range(num_samples))\n",
+    "\n",
+    "print(test_set)\n",
     "\n",
     "from prediction import do_prediction\n",
     "results = []\n",
     "\n",
-    "for i in range(10):\n",
+    "for i in range(num_samples):\n",
     "    results.append(do_prediction(test_set[i]))\n",
     "    \n",
     "print(results)"
