--- a/ReAct_SWE.ipynb
+++ b/ReAct_SWE.ipynb
@@ -42,7 +42,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 4806/4806 [04:09<00:00, 19.26it/s]  \n"
+      "  9%|▉         | 444/4806 [00:39<02:54, 25.04it/s]"
      ]
     }
    ],
@@ -56,7 +56,7 @@
     "\n",
     "print(test_set)\n",
     "\n",
-    "from prediction import do_prediction\n",
+    "from cura.prediction import do_prediction\n",
     "results = []\n",
     "\n",
     "for i in range(num_samples):\n",
@@ -82,7 +82,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.6"
+   "version": "3.10.13"
   }
  },
  "nbformat": 4,
