--- a/SWE_bench_LangSmith_Eval.ipynb
+++ b/SWE_bench_LangSmith_Eval.ipynb
@@ -58,23 +58,14 @@
     "    }\n",
     "\n",
     "test_dataset = list(client.list_examples(dataset_id=\"9afe7b08-5fee-4338-8d8f-b0dbfb677307\"))\n",
-    "# random sample 10 examples from the dataset\n",
     "random.seed(42)\n",
     "random_examples = random.sample(test_dataset, 10)\n",
     "\n",
     "result = evaluate(\n",
     "    predict,\n",
     "    data=random_examples,\n",
-    ")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "list(client.list_examples(dataset_id=\"8250d985-8f81-46b4-8b62-bd0a8e91e9d4\",splits=[\"test\"]))"
+    ")\n",
+    "print(result.experiment_name)"
    ]
   },
   {
@@ -91,6 +82,8 @@
     "from pathlib import Path\n",
     "import json\n",
     "import os\n",
+    "from langsmith.evaluation import evaluate_existing\n",
+    "from langsmith.schemas import Example, Run\n",
     "\n",
     "RUN_EVALUATION_LOG_DIR = Path(\"logs/run_evaluation\")\n",
     "LANGSMITH_EVALUATION_DIR = './langsmith_feedback/feedback.json'\n",
@@ -174,51 +167,26 @@
     "    # clean images + make final report\n",
     "    clean_images(client, existing_images, cache_level, clean)\n",
     "\n",
-    "    convert_runs_to_langsmith_feedback(predictions,dataset,run_id)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "    convert_runs_to_langsmith_feedback(predictions,dataset,run_id)\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "result = evaluate_existing(\"artistic-butter-12\")\n",
+    "\n",
     "dataset = []\n",
     "predictions = {}\n",
     "for res in result:\n",
     "    predictions[res['run'].outputs['instance_id']] = {**res['run'].outputs,**{\"run_id\":str(res['run'].id)}}\n",
     "    dataset.append(res['run'].inputs['inputs'])\n",
     "for d in dataset:\n",
-    "    d['version'] = d['version'].split(\":\")[1]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "predictions"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "    d['version'] = d['version'].split(\":\")[1]\n",
+    "\n",
     "evaluate_predictions(dataset,predictions,max_workers=8,force_rebuild=False,cache_level=\"env\",clean=False \\\n",
-    "                     ,open_file_limit=4096,run_id=\"test\",timeout=1_800)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from langsmith.evaluation import evaluate_existing\n",
-    "from langsmith.schemas import Example, Run\n",
+    "                     ,open_file_limit=4096,run_id=\"test\",timeout=1_800)\n",
+    "\n",
+    "\n",
     "\n",
     "def swe_bench_evaluator(run: Run, example: Example):\n",
     "    with open(LANGSMITH_EVALUATION_DIR, 'r') as json_file:\n",
