--- a/SWE_bench_LangSmith_Eval.ipynb
+++ b/SWE_bench_LangSmith_Eval.ipynb
@@ -45,7 +45,7 @@
    "source": [
     "from langsmith.evaluation import evaluate\n",
     "from langsmith import Client\n",
-    "from prediction import do_prediction\n",
+    "from cura.prediction import do_prediction_plan\n",
     "import random\n",
     "\n",
     "client = Client()\n",
@@ -53,7 +53,7 @@
     "def predict(inputs: dict):\n",
     "    return {\n",
     "        \"instance_id\":inputs['instance_id'],\n",
-    "        \"model_patch\": do_prediction(inputs),\n",
+    "        \"model_patch\": do_prediction_plan(inputs),\n",
     "        \"model_name_or_path\":\"test-model\"\n",
     "    }\n",
     "\n",
@@ -64,6 +64,7 @@
     "result = evaluate(\n",
     "    predict,\n",
     "    data=random_examples,\n",
+    "    max_concurrency=4,\n",
     ")\n",
     "print(result.experiment_name)"
    ]
@@ -173,7 +174,7 @@
     "\n",
     "\n",
     "\n",
-    "result = evaluate_existing(\"artistic-butter-12\")\n",
+    "#result = evaluate_existing(\"artistic-butter-12\")\n",
     "\n",
     "dataset = []\n",
     "predictions = {}\n",
